tests/ui/ferrocene/compiler-arguments/crate-name/crate-name_invalid-name.rs
//@ check-fail
//@ compile-flags: --crate-name=foo-bar
//~? ERROR invalid character '-' in crate name

fn main() {}

// ferrocene-annotations: um_rustc_crate_name
